--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,14 +12,15 @@
 
   .card_image {
     width: 100%;
-    height: 100%;
+    height: 80%;
   }
   .image_block {
     height: 100%;
     overflow: hidden;
   }
-  .image_block img {
-    height: 100%;
+  .image_block img {  
     width: 100%;
+    overflow: hidden;
+    transform: translateY(-10%);
     }
 
