--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,9 @@ body {
 .header_image {
     height: 95vh;
 }
-
+.card_custom {
+  height: 400px;
+}
 .card-title_custom {
     background-color: #000;
     opacity: 0.8;
@@ -17,8 +19,24 @@ body {
     letter-spacing: 6px;
     width: 100%;
 }
+.card-title{
+  top:50px;
+}
+.card_image {
+  width: 100%;
+  height: 100%;
+}
+.image_block {
+  height: 100%;
+  overflow: hidden;
+}
+.image_block img {  
+  width: 100%;
+  overflow: hidden;
+  
+  }
 
-  .card_image {
+  /* .card_image {
     width: 100%;
     height: 80%;
   }
@@ -30,7 +48,7 @@ body {
     width: 100%;
     overflow: hidden;
     transform: translateY(-10%);
-    }
+    } */
 
     .hide {
       display: none;
@@ -58,4 +76,17 @@ body {
   margin-bottom: 10px;
   overflow-y: auto;
   overflow-x: hidden;
+}
+
+.imageBut {
+  bottom: 40px;
+  width: 40%;
+}
+
+.center_position {
+margin-left: auto;
+margin-right: auto;
+left: 0;
+right: 0;
+text-align: center;
 }
