--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,6 +39,14 @@ body {
   
   }
 
+  .image-header-text {
+    position: absolute;
+    right: 10%;
+    bottom: 48%;
+    z-index: 2;
+    color: white;
+    border-bottom: 3px solid purple;
+  }
   /* .card_image {
     width: 100%;
     height: 80%;
